src/project/manifest/snapshots/pixi__project__manifest__system_requirements__tests__lic_misspelled.snap
---
source: src/project/manifest/system_requirements.rs
expression: "\n        [system-requirements.lic]\n        version = \"2.12\"\n        family = \"glibc\"\n        "
---
TOML parse error at line 2, column 30
  |
2 |         [system-requirements.lic]
  |                              ^^^
unknown field `lic`, expected one of `macos`, `linux`, `cuda`, `libc`, `archspec`

